# Mycelium

./: Cargo.toml  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_REVISED.md  README.md  REFACTORING_SUMMARY.md  REWRITE.md  TRANSPORT.md
.claude/: actor-evolution.md  guardrails.md
.github/workflows/: ci.yml
benches/: emit_latency.rs
crates/mycelium-ffi/: Cargo.toml
crates/mycelium-ffi/src/: lib.rs
crates/mycelium-protocol/: Cargo.toml  build.rs  codegen.rs  contracts.yaml
crates/mycelium-protocol/src/: codec.rs  codegen.rs  envelope.rs  fixed_vec.rs  generated.rs  lib.rs  message.rs  messages.rs  routing.rs  schema_compat.rs
crates/mycelium-protocol/tests/: schema_evolution.rs
crates/mycelium-python-native/: Cargo.toml  pyproject.toml
crates/mycelium-python-native/src/: lib.rs
crates/mycelium-transport/: Cargo.toml
crates/mycelium-transport/src/: any.rs  backpressure.rs  bounded.rs  bridge.rs  buffer_pool.rs  bus.rs  codec.rs  config.rs  context.rs  error.rs  handler.rs  lib.rs  local.rs  metrics.rs  ocaml_bridge.rs  ordered.rs  pool.rs  publisher.rs  python_bridge.rs  qos.rs  raw.rs  runtime.rs  service.rs  service_context.rs  service_metrics.rs  service_runtime.rs  shared.rs  shm.rs  shm_ring.rs  socket_endpoint.rs  stream.rs  stream_transport.rs  subscriber.rs  tcp.rs  topics.rs  unix.rs  zerocopy.rs
crates/mycelium-transport/src/actor/: context.rs  handle.rs  mod.rs  runtime.rs  supervisor.rs
crates/mycelium-transport/tests/: buffer_pool_integration.rs  simple_buffer_pool_test.rs
docs/: ACTORS.md  ACTOR_IMPLEMENTATION_PLAN.md  AGENTICS.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_FINAL.md  BUFFER_POOL.md  CODE_REVIEW.md  CODE_REVIEW_ACTION_ITEMS.md  DEPLOYMENT_OPTIONS.md  DESIGN_DECISIONS.md  EXTENSIONS.md  FFI_DEPLOYMENT_GUIDE.md  SYSTEM_OVERVIEW.md  TRANSPORT.md  v0.3.0_RELEASE_NOTES.md
examples/: actor_demo.rs  compile_time_routing.rs  managed_service_demo.rs  measure_latency.rs  overhead_breakdown.rs  ping_pong_service.rs  pure_emit_test.rs  simple_pubsub.rs  simple_service.rs
examples/custom-protocol/: Cargo.toml  README.md  build.rs  contracts.yaml
examples/custom-protocol/src/: main.rs
ocaml-sdk/: dune-project  mycelium.opam
ocaml-sdk/_build/: .db  .digest-db  log
ocaml-sdk/_build/default/: META.mycelium  README.md  mycelium.dune-package  mycelium.install
ocaml-sdk/_build/default/.dune/: configurator  configurator.v2
ocaml-sdk/_build/default/lib/: mycelium.cma  mycelium.cmxa  mycelium.cmxs  mycelium.ml-gen  native_runtime.ml  native_runtime.mli  runtime.ml  runtime.mli  transport.ml
ocaml-sdk/_build/default/lib/.merlin-conf/: lib-mycelium
ocaml-sdk/_build/default/lib/.mycelium.objs/: mycelium__Codec.impl.d  mycelium__Codec.intf.d  mycelium__Messages.impl.all-deps  mycelium__Messages.impl.d  mycelium__Native_runtime.impl.all-deps  mycelium__Native_runtime.impl.d  mycelium__Native_runtime.intf.d  mycelium__Runtime.impl.d  mycelium__Runtime.intf.d  mycelium__Transport.impl.all-deps  mycelium__Transport.impl.d  mycelium__Transport.intf.d
ocaml-sdk/_build/default/lib/.mycelium.objs/byte/: mycelium.cmi  mycelium.cmo  mycelium.cmt  mycelium__Codec.cmi  mycelium__Codec.cmo  mycelium__Codec.cmt  mycelium__Codec.cmti  mycelium__Messages.cmi  mycelium__Messages.cmo  mycelium__Messages.cmt  mycelium__Native_runtime.cmi  mycelium__Native_runtime.cmo  mycelium__Native_runtime.cmt  mycelium__Native_runtime.cmti  mycelium__Runtime.cmi  mycelium__Runtime.cmo  mycelium__Runtime.cmt  mycelium__Runtime.cmti  mycelium__Transport.cmi  mycelium__Transport.cmo  mycelium__Transport.cmt  mycelium__Transport.cmti
ocaml-sdk/_build/default/lib/.mycelium.objs/native/: mycelium.cmx  mycelium__Codec.cmx  mycelium__Messages.cmx  mycelium__Native_runtime.cmx  mycelium__Runtime.cmx  mycelium__Transport.cmx
ocaml-sdk/_build/default/test/: test_codec.ml
ocaml-sdk/_build/default/test/.merlin-conf/: exe-ocaml_bridge_echo  exe-test_codec-280ac445d553a35cb1f87866b6d977b0
ocaml-sdk/_build/default/test/.ocaml_bridge_echo.eobjs/byte/: dune__exe__Ocaml_bridge_echo.cmi  dune__exe__Ocaml_bridge_echo.cmti
ocaml-sdk/_build/default/test/.ocaml_bridge_echo.eobjs/native/: dune__exe__Ocaml_bridge_echo.cmx
ocaml-sdk/_build/default/test/.test_codec.eobjs/: dune__exe.ml-gen  dune__exe__Test_codec.impl.d  dune__exe__Test_codec.intf.d  dune__exe__Test_runtime.impl.d  dune__exe__Test_runtime.intf.d
ocaml-sdk/_build/default/test/.test_codec.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Test_codec.cmi  dune__exe__Test_codec.cmti  dune__exe__Test_runtime.cmi  dune__exe__Test_runtime.cmti
ocaml-sdk/_build/default/test/.test_codec.eobjs/native/: dune__exe.cmx  dune__exe__Test_codec.cmx  dune__exe__Test_runtime.cmx
ocaml-sdk/_build/install/default/lib/mycelium/: META  codec.ml  codec.mli  dune-package  messages.ml  mycelium.cma  mycelium.cmi  mycelium.cmt  mycelium.cmx  mycelium.cmxa  mycelium.cmxs  mycelium.ml  mycelium__Codec.cmi  mycelium__Codec.cmt  mycelium__Codec.cmti  mycelium__Codec.cmx  mycelium__Messages.cmi  mycelium__Messages.cmt  mycelium__Messages.cmx  mycelium__Native_runtime.cmi  mycelium__Native_runtime.cmt  mycelium__Native_runtime.cmti  mycelium__Native_runtime.cmx  mycelium__Runtime.cmi  mycelium__Runtime.cmt  mycelium__Runtime.cmti  mycelium__Runtime.cmx  mycelium__Transport.cmi  mycelium__Transport.cmt  mycelium__Transport.cmti  mycelium__Transport.cmx  native_runtime.ml  native_runtime.mli  opam  runtime.ml  runtime.mli  transport.ml  transport.mli
ocaml-sdk/lib/: codec.ml  codec.mli  dune  messages.ml  mycelium_ffi.h  mycelium_native_stubs.c  transport.mli
ocaml-sdk/test/: dune  ocaml_bridge_echo.ml  test_runtime.ml
python-sdk/: README.md  pyproject.toml
python-sdk/mycelium/: __init__.py  codec.py  message_bus.py  publisher.py  shm_transport.py  subscriber.py  topology.py  transport.py
python-sdk/mycelium/protocol/: __init__.py  runtime.py
python-sdk/mycelium_protocol/: __init__.py  messages.py
scripts/detect_duplication/: Cargo.toml
scripts/detect_duplication/src/: main.rs
tests/: integration_test.rs  lib.rs
(+84 files in other folders)
