opam-version: "2.1"
version: "0.1.0"
synopsis: "Mycelium OCaml SDK"
maintainer: "team@mycelium"
authors: ["Mycelium Developers"]
homepage: "https://github.com/dawsh2/Mycelium"
bug-reports: "https://github.com/dawsh2/Mycelium/issues"
license: "Apache-2.0"

build: [ ["dune" "build" "-p" "mycelium" "@install"] ]
depends: [
  "dune" {>= "3.10"}
  "ocplib-endian"
  "yojson"
  "alcotest" {with-test}
]
