[package]
name = "mycelium-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
rkyv = { version = "0.7", features = ["validation"] }
thiserror = "1.0"
primitive-types = "0.12"  # For U256 support

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2.0", features = ["serde"] }
