[package]
name = "mycelium-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
zerocopy = { version = "0.7", features = ["derive"] }
rkyv = { workspace = true }
thiserror = { workspace = true }
primitive-types = { version = "0.12", default-features = false }  # For U256 support, disable zerocopy to avoid version conflict
rand = "0.8"  # For ActorId and CorrelationId generation

# Codegen dependencies (now that codegen is a public module in src/)
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2.0", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_yaml = "0.9"
indexmap = { version = "2.0", features = ["serde"] }
