[package]
name = "mycelium-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
mycelium-protocol = { path = "../mycelium-protocol" }
mycelium-config = { path = "../mycelium-config" }
tokio = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }
serde = { workspace = true }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
