[package]
name = "mycelium-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
mycelium-protocol = { path = "../mycelium-protocol" }
mycelium-macro = { path = "../mycelium-macro" }
tokio = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = "1.0"
futures = "0.3"
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
