[package]
name = "custom-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Mycelium dependencies for message handling
mycelium-protocol = { path = "../../crates/mycelium-protocol" }
mycelium-transport = { path = "../../crates/mycelium-transport" }
zerocopy = { version = "0.7", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
primitive-types = { version = "0.12", default-features = false }
thiserror = "2.0"  # Required by generated validation error enum

[build-dependencies]
# Dependencies for code generation (same as mycelium-protocol's build.rs)
mycelium-protocol = { path = "../../crates/mycelium-protocol" }
serde = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2.0", features = ["serde"] }
