[package]
name = "detect_duplication"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "detect_duplication"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
walkdir = "2.4"
quote = "1.0"
proc-macro2 = "1.0"
similar = "2.3"  # For text similarity comparison
colored = "2.0"  # For colored terminal output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
